--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                   <a class="social-icon" target="_blank" href="http://instagram.com/sinfo_ist"><i class="fa fa-instagram"></i></a>
                 </ul>
             </nav>
-            <p class="push-right small-100"><img src="img/logofooter.png"></p>
+            <p class="push-right small-100"><a href="http://tecnico.pt" target="_blank"><img src="img/logoist.png"></a></p>
         </div>
         </footer>
     </body>
