--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
           <div class="large-50 medium-50 small-100">
             <h3>What?</h3>
             <p>SINFO is considered to be one of the biggest college-organized events, and one of the most important technological events in Portugal. </p>
-            <h3>Why?</h3>
-            <p>Our main goal is to allow students and general attendance to interact and be closer with influential, important and interesting people or enterprises in the fields of Information Technology and Computer Science.</p>
-          </div>
-          <div class="large-50 medium-50 small-100">
             <h3>When?</h3>
             <p>The 22nd aunual edition will be a week long event and should take place in February 2015. </p>
+            <h3>Where?</h3>
+            <p>SINFO takes place at the Alameda Campus of Instituto Superior Técnico, in the beautiful city of Lisbon, Portugal.</p>
+          </div>
+          <div class="large-50 medium-50 small-100">
+            <h3>Why?</h3>
+            <p>Our main goal is to allow students and general attendance to interact and be closer with influential, important and interesting people or enterprises in the fields of Information Technology and Computer Science.</p>
             <h3>For how much?</h3>
             <p>NOTHING! We commit to make everything available for FREE! You just need to show up to enjoy the event.</p>
           </div>
