--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h3>What?</h3>
             <p>SINFO is considered to be one of the biggest college-organized events, and one of the most important technological events in Portugal. </p>
             <h3>When?</h3>
-            <p>The 22nd aunual edition will be a week long event and should take place in February 2015. </p>
+            <p>The 22nd annual edition will be a week long event and should take place in February 2015. </p>
             <h3>Where?</h3>
             <p>SINFO takes place at the Alameda Campus of Instituto Superior Técnico, in the beautiful city of Lisbon, Portugal.</p>
           </div>
