--- a/index.html
+++ b/index.html
@@ -88,44 +88,54 @@
         <div class="column-group gutters">
           <div class="large-20 medium-20 small-100">
             <h4>Richard Stallman</h4>
+            <p class="note">Founder of GNU and the Free Software Foundation</p>
             <img src="img/speakers/stallman.jpg" alt="">
           </div>
           <div class="large-20 medium-20 small-100">
             <h4>Joel Spolsky</h4>
+            <p class="note">Founder of Fog Creek Software and creator of Stack Overflow</p>
             <img src="img/speakers/spolsky.jpg" alt="">
           </div>
           <div class="large-20 medium-20 small-100">
             <h4>Ray Muzyka</h4>
+            <p class="note">Founder of BioWare and its former CEO</p>
             <img src="img/speakers/muzyka.jpg" alt="">
           </div>
           <div class="large-20 medium-20 small-100">
             <h4>Trina Gregory</h4>
+            <p class="note">Senior Lecturer at University of Southern California</p>
             <img src="img/speakers/tgregory.png" alt="">
           </div>
           <div class="large-20 medium-20 small-100">
             <h4>Rick Falkvinge</h4>
+            <p class="note">Founder and first party leader of the Swedish Pirate Party.</p>
             <img src="img/speakers/falkvinge.jpg" alt="">
           </div>
         </div>
           <div class="column-group gutters">
             <div class="large-20 medium-20 small-100">
               <h4>Jason Gregory</h4>
+              <p class="note">Lead programmer at Naugthy Dog</p>
               <img src="img/speakers/gregory.jpg" alt="">
             </div>
             <div class="large-20 medium-20 small-100">
               <h4>Rasmus Lerdorf</h4>
+              <p class="note">Creator of PHP scripting language</p>
               <img src="img/speakers/lerdorf.jpg" alt="">
             </div>
             <div class="large-20 medium-20 small-100">
               <h4>Alan Shaw</h4>
+              <p class="note">Co-Founder of the Meteor London meetup group</p>
               <img src="img/speakers/shaw.jpg" alt="">
             </div>
             <div class="large-20 medium-20 small-100">
               <h4>Adam DuVander</h4>
+              <p class="note">Developer Communications Director at SendGrid</p>
               <img src="img/speakers/duvander.jpg" alt="">
             </div>
             <div class="large-20 medium-20 small-100">
               <h4>Afonso Salcedo</h4>
+              <p class="note">Founder of Sutro Studios. Former Pixar and Dreamworks</p>
               <img src="img/speakers/salcedo.jpg" alt="">
             </div>
           </div>
