--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <div class="ink-grid text-section">
         <div class="column-group gutters">
-          <div class="large-50 medium-50 small-100">
+          <div class="large-50 medium-50 small-100 justify-text">
             <h3>What?</h3>
             <p>SINFO is considered to be one of the biggest college-organized events, and one of the most important technological events in Portugal. </p>
             <h3>When?</h3>
@@ -60,7 +60,7 @@
             <h3>Where?</h3>
             <p>SINFO takes place at the Alameda Campus of Instituto Superior Técnico, in the beautiful city of Lisbon, Portugal.</p>
           </div>
-          <div class="large-50 medium-50 small-100">
+          <div class="large-50 medium-50 small-100 justify-text">
             <h3>Why?</h3>
             <p>Our main goal is to allow students and general attendance to interact and be closer with influential, important and interesting people or enterprises in the fields of Information Technology and Computer Science.</p>
             <h3>For how much?</h3>
@@ -159,7 +159,7 @@
             <p><b>Ray Muzyka</b> - <i>"It’s amazing what you have done without any university funding!"</i></p>
             <p><b>Afonso Salcedo</b>- <i>"Congratulations for the conference, you're really doing an amazing job and you should be proud. You Rock!"</i></p>
           </div>
-          <div class="large-50 medium-50 small-100">
+          <div class="large-50 medium-50 small-100 justify-text">
             <h3>Size</h3>
             <p>Among the enterprise presentations, speakers presentations, debate panels, workshops and the tecnological exposition the last edition was home to more than 4000 participants.</p>
 
