--- a/index.html
+++ b/index.html
@@ -174,6 +174,93 @@
           SINFO is currently accepting applications for new collaborators for a limited time <br> <a class="transparent-button" href="https://www.facebook.com/sinfoist/photos/a.326603784053411.75231.134758406571284/663493260364460/"> Are you up for the challenge?</a>
         </div>
       </div>
+    </div>
+
+
+
+      <div class="ink-grid text-section team">
+        <div class="column-group gutters">
+          <div class="large-100 medium-100 small-100">
+            <h2>The Team</h2>
+          </div>
+        </div>
+        <div class="column-group gutters">
+          <div class="large-20 medium-20 small-100">
+            <h4>Jorge Palma</h4>
+            <img src="img/team/jorge_palma.png" alt="">
+          </div>
+          <div class="large-20 medium-20 small-100">
+            <h4>Manuel Alves</h4>
+            <img src="img/team/manuel_alves.jpg" alt="">
+          </div>
+          <div class="large-20 medium-20 small-100">
+            <h4>Frederico Carvalho</h4>
+            <img src="img/team/frederico_carvalho.jpg" alt="">
+          </div>
+          <div class="large-20 medium-20 small-100">
+            <h4>Jessica Ribeiro</h4>
+            <img src="img/team/jessica_ribeiro.jpg" alt="">
+          </div>
+          <div class="large-20 medium-20 small-100">
+            <h4>Cláudia Filipe</h4>
+            <img src="img/team/claudia_filipe.png" alt="">
+          </div>
+        </div>
+        <div class="column-group gutters">
+          <div class="large-20 medium-20 small-100">
+            <h4>Mariana Paulo</h4>
+            <img src="img/team/mariana_paulo.jpg" alt="">
+          </div>
+          <div class="large-20 medium-20 small-100">
+            <h4>Joana Fonseca</h4>
+            <img src="img/team/joana_fonseca.jpg" alt="">
+          </div>
+          <div class="large-20 medium-20 small-100">
+            <h4>Diogo Nicolau</h4>
+            <img src="img/team/diogo_nicolau.jpg" alt="">
+          </div>
+          <div class="large-20 medium-20 small-100">
+            <h4>Francisco Dias</h4>
+            <img src="img/team/francisco_dias.jpg" alt="">
+          </div>
+          <div class="large-20 medium-20 small-100">
+            <h4>Gonçalo Sena</h4>
+            <img src="img/team/goncalo_sena.jpg" alt="">
+          </div>
+        </div>        
+        <div class="column-group gutters">
+          <div class="large-20 medium-20 small-100">
+            <h4>João Barata</h4>
+            <img src="img/team/joao_barata.jpg" alt="">
+          </div>
+          <div class="large-20 medium-20 small-100">
+            <h4>Luis Riscado</h4>
+            <img src="img/team/luis_riscado.jpg" alt="">
+          </div>
+          <div class="large-20 medium-20 small-100">
+            <h4>Mike Duarte</h4>
+            <img src="img/team/mike_duarte.jpg" alt="">
+          </div>
+          <div class="large-20 medium-20 small-100">
+            <h4>Manuel Piçarra</h4>
+            <img src="img/team/manuel_picarra.png" alt="">
+          </div>
+          <div class="large-20 medium-20 small-100">
+            <h4>Pedro Saraiva</h4>
+            <img src="img/team/pedro_saraiva.png" alt="">
+          </div>
+        </div>
+        <div class="column-group gutters">
+          <div class="large-20 medium-20 small-100">
+            <h4>Rafael Santos</h4>
+            <img src="img/team/rafael_santos.jpg" alt="">
+          </div>
+          <div class="large-20 medium-20 small-100">
+            <h4>Rodrigo Martins</h4>
+            <img src="img/team/rodrigo_martins.jpg" alt="">
+          </div>
+        </div>
+      </div>
 
       <footer>
         <div class="ink-grid">
