--- a/index.html
+++ b/index.html
@@ -141,6 +141,28 @@
           </div>
       </div>
 
+      <div class="workshops" id="workshops">
+        <div class="opacidade">
+          <h1><a href="#workshops" title="Workshops">Workshops</a></h1>
+          <div class="description">
+            Learn amazing things with the very best on our hands-on workshops.
+          </div>
+        </div>
+      </div>
+
+      <div class="ink-grid text-section">
+        <div class="column-group gutters">
+          <div class="large-50 medium-50 small-100 justify-text">
+            <h3>Technological Exibition</h3>
+            <p>A spot where enterprises can present themselves and benefit from a direct contact with the students. This space will be home to a showcase with various gadgets and interaction devices for the public to experience as well as a meet-and-greet with some of the speakers. The exposition will take place every day of the event, during the entire day.</p>
+          </div>
+          <div class="large-50 medium-50 small-100 justify-text">
+            <h3>Enterprise Presentations</h3>
+            <p>For 45 minutes, enterprise speakers discuss about a chosen theme or project their company has worked on and that is normally related to the specific day’s theme. The fields of activity of the enterprise are also discussed, as well their major clients and most interesting projects. At the end, there is some time reserved for Q&A.</p>
+          </div>
+        </div>
+      </div>
+
       <div class="sponsors" id="sponsors">
         <div class="opacidade">
           <h1><a href="#sponsors" title="Sponsor us!">Sponsor us</a></h1>
@@ -162,6 +184,9 @@
           <div class="large-50 medium-50 small-100 justify-text">
             <h3>Size</h3>
             <p>Among the enterprise presentations, speakers presentations, debate panels, workshops and the tecnological exposition the last edition was home to more than 4000 participants.</p>
+
+            <h3>Ranking</h3>
+            <p>In an <a href="http://developers.blogs.sapo.pt/41164.html">independent inquiry from SAPO Developers Blog</a>, SINFO was considered to be in the top 3 best IT events in Portugal.</p>
 
           </div>
         </div>
@@ -185,86 +210,86 @@
           </div>
         </div>
         <div class="column-group gutters">
-          <div class="large-20 medium-20 small-100">
-            <h5>Jorge Palma</h5>
+          <div class="large-15 medium-30 small-50">
+            <h6>Jorge Palma</h6>
             <img src="img/team/jorge_palma.png" alt="">
           </div>
-          <div class="large-20 medium-20 small-100">
-            <h5>Manuel Alves</h5>
+          <div class="large-15 medium-30 small-50">
+            <h6>Manuel Alves</h6>
             <img src="img/team/manuel_alves.jpg" alt="">
           </div>
-          <div class="large-20 medium-20 small-100">
-            <h5>Frederico Carvalho</h5>
+          <div class="large-15 medium-30 small-50">
+            <h6>Frederico Carvalho</h6>
             <img src="img/team/frederico_carvalho.jpg" alt="">
           </div>
-          <div class="large-20 medium-20 small-100">
-            <h5>Jessica Ribeiro</h5>
+          <div class="large-15 medium-30 small-50">
+            <h6>Jessica Ribeiro</h6>
             <img src="img/team/jessica_ribeiro.jpg" alt="">
           </div>
-          <div class="large-20 medium-20 small-100">
-            <h5>Cláudia Filipe</h5>
+          <div class="large-15 medium-30 small-50">
+            <h6>Cláudia Filipe</h6>
             <img src="img/team/claudia_filipe.png" alt="">
+          </div>
+          <div class="large-15 medium-30 small-50">
+            <h6>Mariana Paulo</h6>
+            <img src="img/team/mariana_paulo.jpg" alt="">
           </div>
         </div>
         <div class="column-group gutters">
-          <div class="large-20 medium-20 small-100">
-            <h5>Mariana Paulo</h5>
-            <img src="img/team/mariana_paulo.jpg" alt="">
-          </div>
-          <div class="large-20 medium-20 small-100">
-            <h5>Joana Fonseca</h5>
+          <div class="large-15 medium-30 small-50">
+            <h6>Joana Fonseca</h6>
             <img src="img/team/joana_fonseca.jpg" alt="">
           </div>
-          <div class="large-20 medium-20 small-100">
-            <h5>Diogo Nicolau</h5>
+          <div class="large-15 medium-30 small-50">
+            <h6>Diogo Nicolau</h6>
             <img src="img/team/diogo_nicolau.jpg" alt="">
           </div>
-          <div class="large-20 medium-20 small-100">
-            <h5>Francisco Dias</h5>
+          <div class="large-15 medium-30 small-50">
+            <h6>Francisco Dias</h6>
             <img src="img/team/francisco_dias.jpg" alt="">
           </div>
-          <div class="large-20 medium-20 small-100">
-            <h5>Gonçalo Sena</h5>
+          <div class="large-15 medium-30 small-50">
+            <h6>Gonçalo Sena</h6>
             <img src="img/team/goncalo_sena.jpg" alt="">
+          </div>
+          <div class="large-15 medium-30 small-50">
+            <h6>João Barata</h6>
+            <img src="img/team/joao_barata.jpg" alt="">
+          </div>
+          <div class="large-15 medium-30 small-50">
+            <h6>Luis Riscado</h6>
+            <img src="img/team/luis_riscado.jpg" alt="">
           </div>
         </div>        
         <div class="column-group gutters">
-          <div class="large-20 medium-20 small-100">
-            <h5>João Barata</h5>
-            <img src="img/team/joao_barata.jpg" alt="">
-          </div>
-          <div class="large-20 medium-20 small-100">
-            <h5>Luis Riscado</h5>
-            <img src="img/team/luis_riscado.jpg" alt="">
-          </div>
-          <div class="large-20 medium-20 small-100">
-            <h5>Mike Duarte</h5>
+          <div class="large-15 medium-30 small-50">
+            <h6>Mike Duarte</h6>
             <img src="img/team/mike_duarte.jpg" alt="">
           </div>
-          <div class="large-20 medium-20 small-100">
-            <h5>Manuel Piçarra</h5>
+          <div class="large-15 medium-30 small-50">
+            <h6>Manuel Piçarra</h6>
             <img src="img/team/manuel_picarra.png" alt="">
           </div>
-          <div class="large-20 medium-20 small-100">
-            <h5>Pedro Saraiva</h5>
+          <div class="large-15 medium-30 small-50">
+            <h6>Pedro Saraiva</h6>
             <img src="img/team/pedro_saraiva.png" alt="">
+          </div>
+          <div class="large-15 medium-30 small-50">
+            <h6>Rafael Santos</h6>
+            <img src="img/team/rafael_santos.jpg" alt="">
+          </div>
+          <div class="large-15 medium-30 small-50">
+            <h6>Rodrigo Martins</h6>
+            <img src="img/team/rodrigo_martins.jpg" alt="">
           </div>
         </div>
         <div class="column-group gutters">
-          <div class="large-20 medium-20 small-100">
-            <h5>Rafael Santos</h5>
-            <img src="img/team/rafael_santos.jpg" alt="">
-          </div>
-          <div class="large-20 medium-20 small-100">
-            <h5>Rodrigo Martins</h5>
-            <img src="img/team/rodrigo_martins.jpg" alt="">
-          </div>
         </div>
       </div>
 
       <footer>
         <div class="ink-grid">
-            <nav class="ink-navigation push-left medium-100 small-100 small-push-left">
+            <nav class="ink-navigation push-left medium-150 small-100 small-push-left">
                 <ul class="menu horizontal">
                   <a class="social-icon" target="_blank" href="http://fb.com/sinfoist"><i class="fa fa-facebook"></i></a>
                   <a class="social-icon" target="_blank" href="http://twitter.com/sinfo_ist"><i class="fa fa-twitter"></i></a>
