--- a/index.html
+++ b/index.html
@@ -210,6 +210,9 @@
           </div>
         </div>
         <div class="column-group gutters">
+          <div class="large-5 hide-medium hide-small">
+          <!-- spacer -->
+          </div>
           <div class="large-15 medium-30 small-50">
             <h6>Jorge Palma</h6>
             <img src="img/team/jorge_palma.png" alt="">
@@ -236,6 +239,9 @@
           </div>
         </div>
         <div class="column-group gutters">
+          <div class="large-5 hide-medium hide-small">
+            <!-- spacer -->
+          </div>
           <div class="large-15 medium-30 small-50">
             <h6>Joana Fonseca</h6>
             <img src="img/team/joana_fonseca.jpg" alt="">
@@ -262,6 +268,9 @@
           </div>
         </div>        
         <div class="column-group gutters">
+          <div class="large-5 hide-medium hide-small">
+            <!-- spacer -->
+          </div>
           <div class="large-15 medium-30 small-50">
             <h6>Mike Duarte</h6>
             <img src="img/team/mike_duarte.jpg" alt="">
