--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <div id="topbar">
         <a href="#"><img src="img/logo.png"></a>
         <a href="#speakers">Speakers</a>
+        <a href="#workshops">Workshops</a>
         <a href="#sponsors">Sponsor us!</a>
         <a href="#joinus">Join us!</a>
       </div>
