--- a/index.html
+++ b/index.html
@@ -156,10 +156,12 @@
           <div class="large-50 medium-50 small-100 justify-text">
             <h3>Technological Exibition</h3>
             <p>A spot where enterprises can present themselves and benefit from a direct contact with the students. This space will be home to a showcase with various gadgets and interaction devices for the public to experience as well as a meet-and-greet with some of the speakers. The exposition will take place every day of the event, during the entire day.</p>
+            <img src="img/exibition.jpg">
           </div>
           <div class="large-50 medium-50 small-100 justify-text">
             <h3>Enterprise Presentations</h3>
             <p>For 45 minutes, enterprise speakers discuss about a chosen theme or project their company has worked on and that is normally related to the specific day’s theme. The fields of activity of the enterprise are also discussed, as well their major clients and most interesting projects. At the end, there is some time reserved for Q&A.</p>
+            <img src="img/presentation.jpg">
           </div>
         </div>
       </div>
