--- a/index.html
+++ b/index.html
@@ -220,27 +220,27 @@
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Jorge Palma</h6>
-            <img src="img/team/jorge_palma.png" alt="">
+            <img src="img/team/jorge_palma.png" onmouseover="this.src='img/team/jorge_palma_sinfo.jpg'" onmouseout="this.src='img/team/jorge_palma.png'" alt="">
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Manuel Alves</h6>
-            <img src="img/team/manuel_alves.jpg" alt="">
+            <img src="img/team/manuel_alves.jpg" onmouseover="this.src='img/team/manuel_alves_sinfo.jpg'" onmouseout="this.src='img/team/manuel_alves.jpg'" alt="">
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Frederico Carvalho</h6>
-            <img src="img/team/frederico_carvalho.jpg" alt="">
+            <img src="img/team/frederico_carvalho.jpg" onmouseover="this.src='img/team/frederico_carvalho_sinfo.jpg'" onmouseout="this.src='img/team/frederico_carvalho.jpg'" alt="">
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Jessica Ribeiro</h6>
-            <img src="img/team/jessica_ribeiro.jpg" alt="">
+            <img src="img/team/jessica_ribeiro.jpg" onmouseover="this.src='img/team/jessica_ribeiro_sinfo.jpg'" onmouseout="this.src='img/team/jessica_ribeiro.jpg'" alt="">
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Cláudia Filipe</h6>
-            <img src="img/team/claudia_filipe.png" alt="">
+            <img src="img/team/claudia_filipe.png" onmouseover="this.src='img/team/claudia_filipe_sinfo.jpg'" onmouseout="this.src='img/team/claudia_filipe.png'" alt="">
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Mariana Paulo</h6>
-            <img src="img/team/mariana_paulo.jpg" alt="">
+            <img src="img/team/mariana_paulo.jpg" onmouseover="this.src='img/team/mariana_paulo_sinfo.jpg'" onmouseout="this.src='img/team/mariana_paulo.jpg'" alt="">
           </div>
         </div>
         <div class="column-group gutters">
@@ -249,27 +249,27 @@
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Joana Fonseca</h6>
-            <img src="img/team/joana_fonseca.jpg" alt="">
+            <img src="img/team/joana_fonseca.jpg" onmouseover="this.src='img/team/joana_fonseca_sinfo.jpg'" onmouseout="this.src='img/team/joana_fonseca.jpg'" alt="">
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Diogo Nicolau</h6>
-            <img src="img/team/diogo_nicolau.jpg" alt="">
+            <img src="img/team/diogo_nicolau.jpg" onmouseover="this.src='img/team/diogo_nicolau_sinfo.jpg'" onmouseout="this.src='img/team/diogo_nicolau.jpg'" alt="">
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Francisco Dias</h6>
-            <img src="img/team/francisco_dias.jpg" alt="">
+            <img src="img/team/francisco_dias.jpg" onmouseover="this.src='img/team/francisco_dias_sinfo.jpg'" onmouseout="this.src='img/team/francisco_dias.jpg'" alt="">
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Gonçalo Sena</h6>
-            <img src="img/team/goncalo_sena.jpg" alt="">
+            <img src="img/team/goncalo_sena.jpg" onmouseover="this.src='img/team/goncalo_sena_sinfo.jpg'" onmouseout="this.src='img/team/goncalo_sena.jpg'" alt="">
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>João Barata</h6>
-            <img src="img/team/joao_barata.jpg" alt="">
+            <img src="img/team/joao_barata.jpg" onmouseover="this.src='img/team/joao_barata_sinfo.jpg'" onmouseout="this.src='img/team/joao_barata.jpg'" alt="">
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Luis Riscado</h6>
-            <img src="img/team/luis_riscado.jpg" alt="">
+            <img src="img/team/luis_riscado.jpg" onmouseover="this.src='img/team/luis_riscado_sinfo.jpg'" onmouseout="this.src='img/team/luis_riscado.jpg'" alt="">
           </div>
         </div>        
         <div class="column-group gutters">
@@ -278,23 +278,23 @@
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Mike Duarte</h6>
-            <img src="img/team/mike_duarte.jpg" alt="">
+            <img src="img/team/mike_duarte.jpg" onmouseover="this.src='img/team/mike_duarte_sinfo.jpg'" onmouseout="this.src='img/team/mike_duarte.jpg'" alt="">
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Manuel Piçarra</h6>
-            <img src="img/team/manuel_picarra.png" alt="">
+            <img src="img/team/manuel_picarra.png" onmouseover="this.src='img/team/manuel_picarra_sinfo.jpg'" onmouseout="this.src='img/team/manuel_picarra.png'" alt="">
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Pedro Saraiva</h6>
-            <img src="img/team/pedro_saraiva.png" alt="">
+            <img src="img/team/pedro_saraiva.png" onmouseover="this.src='img/team/pedro_saraiva_sinfo.jpg'" onmouseout="this.src='img/team/pedro_saraiva.png'" alt="">
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Rafael Santos</h6>
-            <img src="img/team/rafael_santos.jpg" alt="">
+            <img src="img/team/rafael_santos.jpg" onmouseover="this.src='img/team/rafael_santos_sinfo.jpg'" onmouseout="this.src='img/team/rafael_santos.jpg'" alt="">
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Rodrigo Martins</h6>
-            <img src="img/team/rodrigo_martins.jpg" alt="">
+            <img src="img/team/rodrigo_martins.jpg" onmouseover="this.src='img/team/rodrigo_martins_sinfo.jpg'" onmouseout="this.src='img/team/rodrigo_martins.jpg'" alt="">
           </div>
         </div>
         <div class="column-group gutters">
