--- a/index.html
+++ b/index.html
@@ -56,16 +56,26 @@
           <div class="large-50 medium-50 small-100 justify-text">
             <h3>What?</h3>
             <p>SINFO is considered to be one of the biggest college-organized events, and one of the most important technological events in Portugal. </p>
-            <h3>When?</h3>
-            <p>The 22nd annual edition will be a week long event and should take place in February 2015. </p>
-            <h3>Where?</h3>
-            <p>SINFO takes place at the Alameda Campus of Instituto Superior Técnico, in the beautiful city of Lisbon, Portugal.</p>
           </div>
           <div class="large-50 medium-50 small-100 justify-text">
             <h3>Why?</h3>
             <p>Our main goal is to allow students and general attendance to interact and be closer with influential, important and interesting people or enterprises in the fields of Information Technology and Computer Science.</p>
+          </div>
+        </div>
+        <div class="column-group gutters">
+          <div class="large-50 medium-50 small-100 justify-text">
+            <h3>When?</h3>
+            <p>The 22nd annual edition will be a week long event and should take place in February 2015. </p>
+          </div>
+          <div class="large-50 medium-50 small-100 justify-text">
             <h3>For how much?</h3>
             <p>NOTHING! We commit to make everything available for FREE! You just need to show up to enjoy the event.</p>
+          </div>
+        </div>
+        <div class="column-group gutters">
+          <div class="large-50 medium-50 small-100 justify-text">
+            <h3>Where?</h3>
+            <p>SINFO takes place at the Alameda Campus of Instituto Superior Técnico, in the beautiful city of Lisbon, Portugal.</p>
           </div>
         </div>
       </div>
@@ -76,11 +86,11 @@
         <div class="description">
           One week filled with talks from the best speakers!<br><br>
           Suggest here a speaker you would like to see at the next edition.<br>
-          <a class="transparent-button" href="#">Suggest a Speaker</a> <a class="transparent-button" href="#">Apply yourself</a></div>
+          <a class="transparent-button" href="https://docs.google.com/forms/d/1qLLhix4RvcG3vSQ-lSCeIUKjg-3fbqjpFS9g8afgh5Q/viewform" target="_blank">Suggest a Speaker</a></div>
         </div>
       </div>
 
-      <div class="ink-grid text-section">
+      <div class="ink-grid text-section previous-speakers">
         <div class="column-group gutters">
           <div class="large-100 medium-100 small-100">
             <h2>Speakers from previous editions</h2>
@@ -88,54 +98,54 @@
         </div>
         <div class="column-group gutters">
           <div class="large-20 medium-20 small-100">
-            <h5>Richard Stallman</h5>
+            <h6>Richard Stallman</h6>
             <img src="img/speakers/stallman.jpg" alt="">
             <p class="note">Founder of GNU and the Free Software Foundation</p>
           </div>
           <div class="large-20 medium-20 small-100">
-            <h5>Joel Spolsky</h5>
+            <h6>Joel Spolsky</h6>
             <img src="img/speakers/spolsky.jpg" alt="">
             <p class="note">Founder of Fog Creek Software and creator of Stack Overflow</p>
           </div>
           <div class="large-20 medium-20 small-100">
-            <h5>Ray Muzyka</h5>
+            <h6>Ray Muzyka</h6>
             <img src="img/speakers/muzyka.jpg" alt="">
             <p class="note">Founder of BioWare and its former CEO</p>
           </div>
           <div class="large-20 medium-20 small-100">
-            <h5>Trina Gregory</h5>
+            <h6>Trina Gregory</h6>
             <img src="img/speakers/tgregory.png" alt="">
             <p class="note">Senior Lecturer at University of Southern California</p>
           </div>
           <div class="large-20 medium-20 small-100">
-            <h5>Rick Falkvinge</h5>
+            <h6>Rick Falkvinge</h6>
             <img src="img/speakers/falkvinge.jpg" alt="">
             <p class="note">Founder and first party leader of the Swedish Pirate Party.</p>
           </div>
         </div>
           <div class="column-group gutters">
             <div class="large-20 medium-20 small-100">
-              <h5>Jason Gregory</h5>
+              <h6>Jason Gregory</h6>
               <img src="img/speakers/gregory.jpg" alt="">
               <p class="note">Lead programmer at Naugthy Dog</p>
             </div>
             <div class="large-20 medium-20 small-100">
-              <h5>Rasmus Lerdorf</h5>
+              <h6>Rasmus Lerdorf</h6>
               <img src="img/speakers/lerdorf.jpg" alt="">
               <p class="note">Creator of PHP scripting language</p>
             </div>
             <div class="large-20 medium-20 small-100">
-              <h5>Alan Shaw</h5>
+              <h6>Alan Shaw</h6>
               <img src="img/speakers/shaw.jpg" alt="">
               <p class="note">Co-Founder of the Meteor London meetup group</p>
             </div>
             <div class="large-20 medium-20 small-100">
-              <h5>Adam DuVander</h5>
+              <h6>Adam DuVander</h6>
               <img src="img/speakers/duvander.jpg" alt="">
               <p class="note">Developer Communications Director at SendGrid</p>
             </div>
             <div class="large-20 medium-20 small-100">
-              <h5>Afonso Salcedo</h5>
+              <h6>Afonso Salcedo</h6>
               <img src="img/speakers/salcedo.jpg" alt="">
               <p class="note">Founder of Sutro Studios. Former Pixar and Dreamworks</p>
             </div>
@@ -231,16 +241,16 @@
             <img src="img/team/frederico_carvalho.jpg" onmouseover="this.src='img/team/frederico_carvalho_sinfo.jpg'" onmouseout="this.src='img/team/frederico_carvalho.jpg'" alt="">
           </div>
           <div class="large-15 medium-30 small-50">
-            <h6>Jessica Ribeiro</h6>
-            <img src="img/team/jessica_ribeiro.jpg" onmouseover="this.src='img/team/jessica_ribeiro_sinfo.jpg'" onmouseout="this.src='img/team/jessica_ribeiro.jpg'" alt="">
-          </div>
-          <div class="large-15 medium-30 small-50">
             <h6>Cláudia Filipe</h6>
             <img src="img/team/claudia_filipe.png" onmouseover="this.src='img/team/claudia_filipe_sinfo.jpg'" onmouseout="this.src='img/team/claudia_filipe.png'" alt="">
           </div>
           <div class="large-15 medium-30 small-50">
-            <h6>Mariana Paulo</h6>
-            <img src="img/team/mariana_paulo.jpg" onmouseover="this.src='img/team/mariana_paulo_sinfo.jpg'" onmouseout="this.src='img/team/mariana_paulo.jpg'" alt="">
+            <h6>Jessica Ribeiro</h6>
+            <img src="img/team/jessica_ribeiro.jpg" onmouseover="this.src='img/team/jessica_ribeiro_sinfo.jpg'" onmouseout="this.src='img/team/jessica_ribeiro.jpg'" alt="">
+          </div>
+          <div class="large-15 medium-30 small-50">
+            <h6>Joana Fonseca</h6>
+            <img src="img/team/joana_fonseca.jpg" onmouseover="this.src='img/team/joana_fonseca_sinfo.jpg'" onmouseout="this.src='img/team/joana_fonseca.jpg'" alt="">
           </div>
         </div>
         <div class="column-group gutters">
@@ -248,8 +258,8 @@
             <!-- spacer -->
           </div>
           <div class="large-15 medium-30 small-50">
-            <h6>Joana Fonseca</h6>
-            <img src="img/team/joana_fonseca.jpg" onmouseover="this.src='img/team/joana_fonseca_sinfo.jpg'" onmouseout="this.src='img/team/joana_fonseca.jpg'" alt="">
+            <h6>Mariana Paulo</h6>
+            <img src="img/team/mariana_paulo.jpg" onmouseover="this.src='img/team/mariana_paulo_sinfo.jpg'" onmouseout="this.src='img/team/mariana_paulo.jpg'" alt="">
           </div>
           <div class="large-15 medium-30 small-50">
             <h6>Diogo Nicolau</h6>
