--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>
-            SINFO 22
+            SINFO
         </title>
         <meta name="description" content="">
         <meta name="author" content="ink, cookbook, recipes">
