--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <nav class="ink-navigation ink-grid hide-small hide-tiny ie7">
           <ul class="menu horizontal flat black shadowed">
             <li>
-              <a class="logoPlaceholder" href="#" title="SINFO">SINFO</a>
+              <a class="logoPlaceholder" href="#" title="SINFO"><img src="img/logotext.png"></a>
             </li>
             <li><a href="#speakers">Speakers</a></li>
             <li><a href="#workshops">Workshops</a></li>
@@ -47,7 +47,7 @@
         <nav class="ink-navigation ink-grid hide-all show-small">
           <ul class="menu vertical flat black">
             <li class="title">
-              <a class="logoPlaceholder push-left" href="#" title="SINFO">SINFO</a>
+              <a class="logoPlaceholder push-left" href="#" title="SINFO"><img src="img/logotext.png"></a>
                 <button class="toggle" data-target="#topbar_menu"><span class="icon-reorder"></span></button>
             </li>           
           </ul>
